assets/css/custom.css
@font-face {
  font-family: "Fira Code VF";
	font-display: swap;
	src: url(/fonts/FiraCode-VF.woff2) format("woff2");
  font-weight: 300 700;
  font-style: normal;
}

body {
  font-family: Verdana, sans-serif;
  margin: auto;
  padding: 20px;
  max-width: 760px;
  text-align: left;
  background-color: #1d1f27;
  word-wrap: break-word;
  overflow-wrap: break-word;
  line-height: 1.7;
  color: #c9d1d9;
}

h1,
h2,
h3,
h4,
h5,
h6,
strong,
b {
  color: #eee;
}

a {
  color: #8cc2dd;
}

.title {
  text-decoration: none;
  border: 0;
}
.title h1 {
  font-size: 24px;
  margin: 19.92px 0 19.92px 0;
}

.title span {
  font-weight: 400;
}

nav a {
  margin-right: 10px;
}

textarea {
  background-color: #252525;
  color: #ddd;
  width: 100%;
  font-size: 16px;
}

input {
  background-color: #252525;
  color: #ddd;
  font-size: 16px;
}

table:not(.highlight) {
  width: 100%;

  border-collapse: collapse;
  margin: 1rem 0;
  overflow-x: auto;

  & th, & td {
    border: 1px solid #394048;
    padding: .6em 1em;
  }

  & tr:nth-child(2n) {
    background-color: #242731;
  }

  & th {
    text-align: center;
  }
}

p + p {
  margin: 24px 0 6px;
}

p:has(img) {
  text-align: center;
}

p > code {
  color: beige;
}

img {
  display: block;
  max-width: 100%;

  &:not(.modal-img) {
    cursor: zoom-in;
  }
}

blockquote {
  margin: 0;
  padding: 0 1em;
  line-height: 1.6;
  border-left: 5px solid #76808c;
  font-style: italic;

  & p {
    display: block;
    margin-bottom: 0;
  }

  & p + p {
    margin-top: 0;
  }

  & * {
    color: #76808c !important;
  }
}

sub, sup {
  padding-left: 0.6px;
}

footer {
  padding: 25px;
  text-align: center;
}

.helptext {
  color: #aaa;
  font-size: small;
}

.errorlist {
  color: #eba613;
  font-size: small;
}

/* blog posts */
ul.blog-posts {
  list-style-type: none;
  padding: unset;
}

ul.blog-posts li {
  display: flex;
  margin-bottom: 10px;
}

ul.blog-posts li span {
  margin-right: 0.8em;

  & i {
    font-size: 0.8em;
    color: #aaa;
  }
}

ul.blog-posts li a:visited {
  color: #7a85db;
}

a.blog-tags {
  line-height: 2;
  margin-right: 12px;
}

h3.blog-filter {
  margin-bottom: 0;
}

.disabled {
  color: currentColor;
  cursor: not-allowed;
  opacity: 0.7;
}

p.byline {
  text-align: right;
  font-size: small;
  font-style: italic;
}

figure {
  margin-inline-start: 0em;
  margin-inline-end: 0em;
}

figcaption > p {
  margin-block-start: 0px;
  text-align: center;
  font-style: italic;
  color: #ccc;
}

.about-me {
  display: flex;
  align-items: center;
  margin-top: 1.33em;

  & img {
    width: 7rem;
    height: 7rem;
    border-radius: 50%;
    cursor: initial;
  }

  span {
    margin-left: 1rem;
  }
}

a[href^="#"] {
  color: #eee;
  text-decoration: none;
}

pre[class*="language-"] code[class*="language-"] {
  font-size: .85rem;
  line-height: 1.4;
  font-family: "Fira Code VF", Consolas, Monaco, "Andale Mono", "Ubuntu Mono", monospace;
  font-feature-settings: "zero", "ss02", "ss04", "ss05", "ss06", "ss08", "cv31";

  .brace-selected {
    background-color: #41504d;
    outline: none !important;
  }
}

.hide {
  display: none;
}

.show {
  display: block;
}

#modal {
  position: fixed;
  z-index: 1;
  left: 0;
  top: 0;
  width: 100%;
  height: 100%;
  overflow: auto;
  background-color: rgba(0,0,0,0.7);

  & img {
    position: absolute;
    left: 50%;
    top: 50%;
    transform: translate(-50%, -50%);
    max-width: 80%;
  }
}

